fix: overflow

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,3 +4,7 @@
       color: inherit;
     }
   }
+
+  body {
+    overflow-x: hidden;
+  }
